# e628

./: .gitignore  Getting Started with Python_Programming_Guide.docx  README.md  classification_template.ipynb  forex_data.duckdb  pyproject.toml
data/: Download-GDPconstant-USD-countries.xlsx  combined_df.csv  energy_long_df.csv  northwind_database.xlsx  smoking_birth_weight.csv  uber_surge.csv  world_happiness.csv
data/nycflights23/: airlines.csv  airports.csv  (+2 more)
group-project/: group-project-rubric.xlsx  regression_template.ipynb  ~$group-project-rubric.xlsx
session01-lecture01/: 01_simple_tip_calculator.py  02_fruit_store.py  03_guessing_game.py  04_northwind_pandas.py  05_advanced_eda.py  06_avocado_analysis.py  HW1_Avocados.ipynb  Session1_Rubric_Exploration.xlsx  lists_and_loops.py
session03-lecture03/: 04_long_wide_melt-pivot.py  04_student_scores_plots.ipynb  HW2.ipynb
session03-lecture3/: 01_numpy_discussion.py  02_numpy_finance_tutorial.py  03_dates_and_times.py  05_download_sp500.py  HW2.ipynb  fonts.py  uk_polls_scraping+tidy.ipynb
session05-lecture05/: 01_geopandas_projections.py  01_northwind_SQL.ipynb  02_class_participants_geocoding.py  02_duckdb_arrow.ipynb  03_mapping_London_stop_search.py  03_nyc_taxi_duckdb_maps.ipynb  04_mapbox_routing.py  05_make_sexy_map.py  06_interactivity_plotly.py  hw3-sql.ipynb  min-max-stock-return.ipynb
session07-ML/: 01_machine_learning.ipynb  EDA-cardfraud-energy-CPI.ipynb  bechdel_test.ipynb  classification_workflow.py  hw4.ipynb  regression-workflow.py
session07-machine_learning/: 07-01-machine-learning.ipynb
(+5 files in other folders)
