[project]
name = "e628-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "bs4>=0.0.2",
    "country-converter>=1.3.2",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "duckdb>=1.3.2",
    "gapminder>=0.1",
    "geopandas>=1.1.1",
    "highlight-text>=0.2",
    "ibis>=3.3.0",
    "ibis-framework>=10.8.0",
    "lightgbm>=4.6.0",
    "llvmlite>=0.46.0",
    "matplotlib>=3.10.5",
    "numba>=0.63.0",
    "numpy>=2.3.2",
    "nycflights13>=0.0.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-datareader>=0.10.0",
    "plotly>=6.3.0",
    "pyjanitor==0.31.0",
    "python-pptx>=1.0.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "resampy>=0.4.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skimpy>=0.0.18",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.0",
    "watchdog>=6.0.0",
    "wbgapi>=1.0.12",
    "xgboost>=3.2.0",
    "yfinance>=0.2.65",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "setuptools<80.0.0",
    "utils>=1.0.2",
    "polars-lts-cpu>=1.33.1",
]

[tool.uv]
no-build-package = ["llvmlite", "numba"]
